# ollamacode

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  install.py  mkdocs.yml  pyproject.toml
.githooks/: README.md  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-release.yml  ci.yml  extension-e2e.yml
.ollamacode/: config.yaml
docs/: CHANGELOG.md  CHECKPOINTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTROL_PLANE_API.md  HOOKS.md  MCP_SERVERS.md  OPENCODE_PARITY.md  OTHER_EDITORS.md  PRODUCT_BACKLOG.md  RLM.md  ROADMAP.md  SECURITY.md  STRUCTURED_PROTOCOL.md  TOOLCHAIN_REGISTRY.md  VOICE.md  WIKI.md  api.md  index.md  suggestions.md
editor/vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.js  vitest.config.js.map  vitest.config.ts
editor/vscode-extension/src/: extension.ts  ollamacodeRunner.test.ts  ollamacodeRunner.ts
editor/vscode-extension/src/test/: runTest.ts
editor/vscode-extension/src/test/suite/: extension.test.ts  index.ts
editors/neovim/: README.md
editors/neovim/lua/ollamacode/: init.lua
editors/neovim/plugin/: ollamacode.vim
editors/vscode/: README.md  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
evals/: basic.json
examples/: apple_fm_poc.py  codebase_mcp.py  demo_server.py  fs_mcp.py  ollamacode-full-git.yaml  ollamacode-semantic.yaml  run_semantic_demo.py  terminal_mcp.py
ollamacode/: __init__.py  __main__.py  _chat_helpers.py  agent.py  agent_modes.py  auth_registry.py  bridge.py  channels.py  checkpoints.py  cli.py  commands_loader.py  compaction.py  completions.py  config.py  context.py  control_plane.py  convert_mcp.py  custom_commands.py  diagnostics.py  edits.py  file_watcher.py  fleet.py  health.py  hooks.py  init_templates.py  lsp_client.py  mcp_client.py  memory.py  model_variants.py  multi_agent.py  ollama_client.py  permission_runtime.py  permissions.py  plugins.py  protocol.py  protocol_server.py  question_runtime.py  rag.py  rate_limit.py  refactor.py  (+20 more)
ollamacode/_tui_textual/: __init__.py  app.py  styles.tcss
ollamacode/_tui_textual/context/: keybinds.py  state.py  theme.py
ollamacode/_tui_textual/dialogs/: agent_picker.py  checkpoint_list.py  command_palette.py  export_import.py  model_picker.py  question.py  refactor.py  session_list.py  theme_picker.py  tool_confirm.py
ollamacode/_tui_textual/screens/: home.py  session.py
ollamacode/_tui_textual/widgets/: __init__.py  footer.py  header.py  logo.py  messages.py  prompt.py  sidebar.py  spinner.py  tips.py  toast.py  todo_item.py  tool_display.py
ollamacode/providers/: __init__.py  anthropic_provider.py  apple_fm_provider.py  azure_provider.py  base.py  bedrock_provider.py  gemini_provider.py  ollama_provider.py  openai_compat.py
ollamacode/servers/: __init__.py  codebase_mcp.py  fs_mcp.py  git_mcp.py  question_mcp.py  reasoning_mcp.py  screenshot_mcp.py  semantic_mcp.py  skills_mcp.py  state_mcp.py  task_mcp.py  terminal_mcp.py  todo_mcp.py  tools_mcp.py  web_search_mcp.py  webfetch_mcp.py
ollamacode/webapp/: app.css  app.js  index.html
tests/: __init__.py  conftest.py  test_bridge.py  test_mcp_client.py
tests/e2e/: __init__.py  test_cli_e2e.py  test_control_plane_http_e2e.py
tests/helpers/: mock_mcp.py
tests/integration/: test_cli_demo_mcp.py  test_cli_multi_mcp.py  test_rlm.py
tests/unit/: _test_tui_app_textual.py  _test_tui_widgets_textual.py  test_agent.py  test_agent_stream_provider.py  test_anthropic_provider.py  test_apple_fm_provider.py  test_chat_helpers.py  test_checkpoints.py  test_cli.py  test_codebase_mcp.py  test_completions.py  test_config.py  test_context.py  test_control_plane.py  test_convert_mcp.py  test_edits.py  test_fleet.py  test_fs_mcp.py  test_git_mcp.py  test_health.py  test_hooks.py  test_memory.py  test_ollama_client.py  test_ollama_provider.py  test_openai_compat.py  test_permission_runtime.py  test_protocol.py  test_protocol_server.py  test_provider_base.py  test_question_runtime.py  test_rag.py  test_rate_limit.py  test_reasoning_mcp.py  test_refactor.py  test_repo_map.py  test_rlm.py  test_sandbox.py  test_screenshot_mcp.py  test_secrets.py  test_security_fixes.py  (+18 more)
