[project]
name = "ollamacode"
version = "1.0.0"
description = "Local coding assistant with Ollama and MCP tools—no cloud required"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "ollama>=0.4.0",
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "cryptography>=42.0.0",
    "numpy>=1.26.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/jayluxferro/ollamacode"
Repository = "https://github.com/jayluxferro/ollamacode"
Documentation = "https://github.com/jayluxferro/ollamacode#readme"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocstrings[python]>=0.24.0",
]
[project.scripts]
ollamacode = "ollamacode.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ollamacode"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
    "pytest-timeout>=2.3.0",
    "bandit>=1.7.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocstrings[python]>=0.24.0",
]
apple_fm = [
    "apple-fm-sdk @ git+https://github.com/apple/python-apple-fm-sdk.git",
]

[tool.ruff]
line-length = 128
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C4", "B", "UP", "SIM"]
# C4: flake8-comprehensions, B: flake8-bugbear, UP: pyupgrade, SIM: flake8-simplify
ignore = [
    "B008",   # function-call-in-default-argument (common pattern with FastMCP)
    "B905",   # zip-without-explicit-strict
    "SIM108", # use-ternary-operator (reduces readability)
    "UP007",  # non-pep604-annotation (need 3.11 compat)
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportMissingParameterType = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require Ollama and/or MCP (deselect with '-m \"not integration\"')",
    "e2e: marks end-to-end tests (full CLI flow; often same as integration)",
]

[tool.coverage.run]
source = ["ollamacode"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 70
exclude_lines = ["pragma: no cover", "def __repr__", "if TYPE_CHECKING:"]

[tool.bandit]
exclude_dirs = ["tests", "docs", "examples"]
skips = ["B101", "B404", "B603"]
# B101: assert used (fine in non-production code paths)
# B404: import subprocess (needed for terminal_mcp, hooks)
# B603: subprocess call (validated inputs)
